--- a/source/styles/auto-imports.scss
+++ b/source/styles/auto-imports.scss
@@ -7,3 +7,4 @@
 @import '../components/component/component.scss';
 @import '../components/footer/footer.scss';
 @import '../components/header/header.scss';
+@import '../components/list/list.scss';
