Added live server to run build

--- a/source/layouts/default.html
+++ b/source/layouts/default.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="shortcut icon" type="/build/images/logo-512x512.png" href="/build/favicon.ico" />
-	<link rel="stylesheet" href="{{source}}/build/styles/style.css" type="text/css" media="all" />
-	<script type="module" src="/build/js/main.js"></script>
+    <link rel="shortcut icon" type="images/logo-512x512.png" href="favicon.ico" />
+	<link rel="stylesheet" href="=styles/style.css" type="text/css" media="all" />
+	<script type="module" src="js/main.js"></script>
 
     <title>{{title}}</title>
 </head>
