Structure changes and counter created for demonstration of working with javascript in the app

--- a/source/components/header/header.html
+++ b/source/components/header/header.html
@@ -1,3 +1,5 @@
 <header class="header">
-    <h2>Header</h2>
+    <img class="stache__img--left" src="images/stache-logo-left.png" alt="{">
+    <h2>{{title}}</h2>
+    <img class="stache__img--right" src="images/stache-logo-right.png" alt="}">
 </header>
