--- a/source/components/footer/footer.scss
+++ b/source/components/footer/footer.scss
@@ -1,3 +1,11 @@
 .footer {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    color: rgb(128, 128, 128);
+    background-color: rgb(240, 240, 240);
+    position: fixed;
+    bottom: 0;
 }
