--- a/source/components/header/header.scss
+++ b/source/components/header/header.scss
@@ -1,3 +1,12 @@
 .header {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: white;
+    -webkit-box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
+    -moz-box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
+    box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
+    height: 100px;
+    margin-bottom: 6em;
 }
