--- a/source/styles/auto-imports.scss
+++ b/source/styles/auto-imports.scss
@@ -4,7 +4,7 @@
 // You may rearrange the order of the imports however you like.
 // You may NOT make any other alterations to this file.
 
-@import '../components/component/component.scss';
-@import '../components/footer/footer.scss';
+@import '../components/counter/counter.scss';
 @import '../components/header/header.scss';
-@import '../components/list/list.scss';
+@import '../components/hello/hello.scss';
+@import '../components/footer/footer.scss';
