--- a/source/components/counter/counter.scss
+++ b/source/components/counter/counter.scss
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 9em;
+    font-size: 40px;
+    min-width: 300px;
 
     &--top,
-    &--bottom {
-        font-size: 40px;
+    &__buttons {
         width: 100%;
         display: flex;
         align-items: center;
@@ -16,30 +16,41 @@
         margin-bottom: 0.8em;
     }
     &--bottom {
+        width: 300px;
+    }
+    &__buttons {
         justify-content: center;
     }
     &__button {
-        width: 1em;
+        flex: 1;
         height: 1em;
         line-height: 0;
         border: 1px solid rgb(206, 206, 206);
-        border-radius: 6px;
         background-color: white;
         outline: none;
+        padding: 0.7em;
         &:hover {
             background-color: rgb(243, 243, 243);
             cursor: pointer;
         }
+        &:nth-child(1) {
+            border-top-left-radius: 8px;
+            border-bottom-left-radius: 8px;
+        }
+        &:nth-child(3) {
+            border-top-right-radius: 8px;
+            border-bottom-right-radius: 8px;
+        }
     }
     &__input {
         height: 1em;
-        width: 4em;
-        margin: 0 0.5em;
+        width: 100%;
         padding: 0.8em 0;
         font-weight: bold;
         text-align: center;
         background-color: white;
         border: 1px solid rgb(206, 206, 206);
-        border-radius: 6px;
+        border-radius: 8px;
+        margin-bottom: 1em;
     }
 }
