--- a/source/components/footer/footer.scss
+++ b/source/components/footer/footer.scss
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     height: $footer-height;
-    color: rgb(128, 128, 128);
-    background-color: rgb(240, 240, 240);
+    color: rgb(70, 70, 70);
+    background-color: $footer-color;
 }
+
