--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -1,1 +1,7 @@
-$footer-height: 100px;
+$footer-height: 90px;
+$header-height: 90px;
+$wrapper-width: 350px;
+
+$wrapper-color: #ffffff;
+$footer-color: #dddddd;
+$header-color: #ffffff;
