--- a/source/components/counter/counter.html
+++ b/source/components/counter/counter.html
@@ -5,8 +5,11 @@
         <img class="stache__img--right" src="images/stache-logo-right.png" alt="}">
     </div>
     <div class="counter--bottom">
-        <button class="counter__button" onclick="sub()">-</button>
         <input type="text" class="counter__input" value="1">
-        <button class="counter__button" onclick="add()">+</button>
+        <div class="counter__buttons">
+            <button class="counter__button" onclick="sub()">-</button>
+            <button class="counter__button" onclick="reset()">reset</button>
+            <button class="counter__button" onclick="add()">+</button>
+        </div>
     </div>
 </div>
