--- a/source/components/header/header.html
+++ b/source/components/header/header.html
@@ -1,5 +1,3 @@
 <header class="header">
-    <img class="stache__img--left" src="images/stache-logo-left.png" alt="{">
-    <h2>{{title}}</h2>
-    <img class="stache__img--right" src="images/stache-logo-right.png" alt="}">
+    {{> hello text="Stache" }}
 </header>
