--- a/source/components/header/header.scss
+++ b/source/components/header/header.scss
@@ -7,6 +7,7 @@
     -webkit-box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
     -moz-box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
     box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
-    height: 100px;
-    margin-bottom: 6em;
+    height: $header-height;
+    background-color: $header-color;
+    font-size: 14px;
 }
