Components demonstration page, added blank page, plugins folder for js plugins, added jquery

--- a/source/components/counter/counter.html
+++ b/source/components/counter/counter.html
@@ -1,8 +1,6 @@
 <div class="counter">
     <div class="counter--top">
-        <img class="stache__img--left" src="images/stache-logo-left.png" alt="{">
-        <h1 class="counter__number">0</h1>
-        <img class="stache__img--right" src="images/stache-logo-right.png" alt="}">
+        {{> staches class="counter__number" text="0" }}
     </div>
     <div class="counter--bottom">
         <input type="text" class="counter__input" value="1">
