--- a/source/components/header/header.scss
+++ b/source/components/header/header.scss
@@ -9,5 +9,6 @@
     box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
     height: $header-height;
     background-color: $header-color;
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: bold;
 }
