--- a/source/components/staches/staches.html
+++ b/source/components/staches/staches.html
@@ -1,5 +1,5 @@
-<div class="hello">
+<div class="staches">
         <img class="stache__img--left" src="images/stache-logo-left.png" alt="{">
-        <h1 class="hello__text">Hello {{text}}!</h1>
+        <p class="{{class}}">{{text}}</p>
         <img class="stache__img--right" src="images/stache-logo-right.png" alt="}">
 </div>
