--- a/source/layouts/default.html
+++ b/source/layouts/default.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="root">
-        {{> header title="Stache App"}}
+        {{> header }}
         <!-- Everything in pages folder renders in body segment -->
         {{> body }}
         <!-- Everything in pages folder renders in body segment -->
