--- a/source/styles/auto-imports.scss
+++ b/source/styles/auto-imports.scss
@@ -6,5 +6,5 @@
 
 @import '../components/counter/counter.scss';
 @import '../components/header/header.scss';
-@import '../components/hello/hello.scss';
 @import '../components/footer/footer.scss';
+@import '../components/staches/staches.scss';
