--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -1,6 +1,6 @@
 $footer-height: 90px;
 $header-height: 90px;
-$wrapper-width: 350px;
+$wrapper-width: 40vw;
 
 $wrapper-color: #ffffff;
 $footer-color: #dddddd;
