--- a/source/components/counter/counter.scss
+++ b/source/components/counter/counter.scss
@@ -2,24 +2,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 40px;
-    min-width: 300px;
+    justify-content: center;
+    font-size: 60px;
+    width: 280px;
 
-    &--top,
+    &__number {
+        font-weight: bold;
+        margin: 0 0.25em;
+    }
     &__buttons {
         width: 100%;
         display: flex;
         align-items: center;
     }
     &--top {
+        display: flex;
+        align-items: center;
         justify-content: space-between;
         margin-bottom: 0.8em;
     }
     &--bottom {
-        width: 300px;
+        font-size: 35px;
     }
     &__buttons {
-        justify-content: center;
+        width: 100%;
     }
     &__button {
         flex: 1;
@@ -46,7 +52,6 @@
         height: 1em;
         width: 100%;
         padding: 0.8em 0;
-        font-weight: bold;
         text-align: center;
         background-color: white;
         border: 1px solid rgb(206, 206, 206);
