Added es6 support with babel, some fixes

--- a/source/components/header/header.scss
+++ b/source/components/header/header.scss
@@ -3,12 +3,11 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: white;
-    -webkit-box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
-    -moz-box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
-    box-shadow: 0px 3px 22px 15px rgba(0,0,0,0.03);
+    -webkit-box-shadow: 0px 3px 22px 15px rgba(0, 0, 0, 0.03);
+    -moz-box-shadow: 0px 3px 22px 15px rgba(0, 0, 0, 0.03);
+    box-shadow: 0px 3px 22px 15px rgba(0, 0, 0, 0.03);
     height: $header-height;
-    background-color: $header-color;
+    border-bottom: 1px solid $header-color;
     font-size: 20px;
     font-weight: bold;
 }
