--- a/source/components/footer/footer.scss
+++ b/source/components/footer/footer.scss
@@ -5,6 +5,5 @@
     width: 100%;
     height: $footer-height;
     color: rgb(70, 70, 70);
-    background-color: $footer-color;
+    border-top: 1px solid $footer-color;
 }
-
