--- a/source/components/footer/footer.html
+++ b/source/components/footer/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <p>&copy; Copyright 2021, {{corp}}</p>
+    <p>&copy; Copyright <span class="footer__copyright-year"></span>, {{corp}}</p>
 </footer>
