--- a/source/components/counter/counter.scss
+++ b/source/components/counter/counter.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     font-size: 60px;
     width: 280px;
+    margin-bottom: 24px;
 
     &__number {
         font-weight: bold;
