--- a/source/styles/global.scss
+++ b/source/styles/global.scss
@@ -3,7 +3,9 @@
     box-sizing: border-box;
 }
 
-html, body, #root {
+html,
+body,
+#root {
     width: 100%;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -14,7 +16,8 @@ html, body, #root {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 180px);
+    padding: 24px 0;
+    min-height: calc(100vh - 180px);
 }
 
 .wrapper {
@@ -22,8 +25,19 @@ html, body, #root {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    width: $wrapper-width;
     margin: 0 auto;
+    padding: 24px 0;
+}
+
+//Utilities
+.link {
+    color: $link-color;
+    font-size: 18px;
+    transition: 0.3s color;
+
+    &:hover {
+        color: $link-color-hover;
+    }
 }
 
 //Pages
