--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -4,9 +4,11 @@
 //Variables
 @import "./variables.scss";
 
+//Variables
+@import "./mixins.scss";
+
 //global
 @import "./global.scss";
 
 //Components
 @import "../components/**/**.scss";
-
