handlebars support added, examples updated

--- a/source/components/header/header.html
+++ b/source/components/header/header.html
@@ -1,3 +1,5 @@
 <header class="header">
-    {{> staches class="hello__text" text=title }}
+    {{#staches}}
+        {{title}}
+    {{/staches}}
 </header>
