fixed not displayin variables in wrapper components

--- a/source/components/counter/counter.html
+++ b/source/components/counter/counter.html
@@ -1,6 +1,6 @@
 <div class="counter">
     <div class="counter--top">
-        {{#staches className="counter__number"}}0{{/staches}}
+        {{#staches classes="counter__number"}}0{{/staches}}
     </div>
     <div class="counter--bottom">
         <input type="text" class="counter__input" value="1">
